<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fall Detector</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Impostazioni</string>
    <string name="action_save">Save</string>
    <string name="ns_menu">Menù</string>
    <string name="ns_menu_bar">Fall Detector</string>
    <string name="ns_menu_1">Home</string>
    <string name="ns_menu_2">Sessione Corrente</string>
    <string name="ns_menu_3">Sessioni</string>
    <string name="ns_menu_4">Impostazioni</string>
    <string name="ns_menu_5">Crediti</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="textview">TextView</string>
    <string name="cron">Chronometer</string>
    <string name="stop">Stop</string>
    <string name="title_activity_crediti_fragment">CreditiFragment</string>
    <string name="descImage">Immagine del drawer</string>
    <string name="descRow">Immagine dello header</string>
    <string name="title_activity_sessione_corrente_fragment">SessioneCorrenteFragment</string>
    <string name="title_activity_fragment_credits">FragmentCredits</string>
    <string name="title_activity_fragment_settings">FragmentSettings</string>
    <string name="title_activity_fragment_current_session">FragmentCurrentSession</string>
    <string name="title_activity_fragment_home">FragmentHome</string>
    <string name="DescPlay">Tasto Play</string>
    <string name="DescStop">Tasto Stop</string>
    <string name="DescPause">Tasto Pause</string>
    <string name="time">00:00:00</string>
    <string name="titleSession">Nessuna sessione</string>
    <string name="playtitleSession">Sessione in corso</string>
    <string name="toast_act_title">AVVISO</string>
    <string name="toast_act_messagge">Stai bene? Tra 10sec. verrà mandato un messaggio di aiuto. Premi Annulla per annullare.</string>
    <string name="toast_act_button">Annulla</string>
    <string name="title_activity_fragment_resume">FragmentResume</string>
    <string name="settings">Impostazioni FallDetector</string>
    <string name="textaccurancy">Scegli l\'accuratezza dell\'accelerometro</string>
    <string name="accurancy_prompt">Scegli</string>
    <string name="textmaxduration">Scegli la durata massima della sessione</string>
    <string name="maxsession_prompt">Massima durata sessione</string>
    <string name="texttimer">Imposta promemoria giornaliero</string>
    <string name="textonofftimer">Attiva</string>
    <string name="textsens">Scegli la sensibilità</string>
    <string name="sens_prompt">Scegli</string>
    <string name="textemail">Email a cui inviare la richiesta di aiuto</string>
    <string name="buttonaddemail">LISTA EMAIL</string>
    <string name="deletesession">CANCELLA SESSIONI</string>
    <string name="deletedata">CANCELLA CONTENUTO</string>
    <string name="enableLoc">Localizzazione ATTIVA</string>
    <string name="NoenableLoc">Localizzazione NON ATTIVA</string>
    <string name="enableNet">Connessione dati ATTIVA</string>
    <string name="NoenableNet">Connessione dati NON ATTIVA</string>
    <string name="toastLoc">ATTIVARE LOCALIZZAZIONE (Gps o wifi/rete)</string>
    <string name="toastNet">ATTIVARE CONNESSIONE DATI</string>
    <string name="toastPlay">Play</string>
    <string name="toastStop">Stop</string>
    <string name="toastPause">Pause</string>
    <string name="toastCont">NESSUNA EMAIL SALVATA</string>
    <string name="title_activity_detail_fall">Dettaglio Caduta</string>
    <string name="title_activity_fragment_detail_session">Dettagli sessione</string>
    <string name="title_activity_rename">Rinomina sessione</string>
    <string name="toast_rename_button">Conferma</string>
    <string name="activityRename">  Rinominare la Sessione?</string>
    <string name="toast_act_ok">Conferma</string>
    <string name="text_email">E-mail*</string>
    <string name="text_email1">Indirizzo e-mail: </string>
    <string name="text_name">Nome*</string>
    <string name="text_surname">Cognome*</string>
    <string name="text_fall">Caduta: </string>
    <string name="descript">Grafico caduta</string>
    <string name="text_example_fall">XXX</string>
    <string name="text_example_sess">XXX</string>
    <string name="text_date_fall">Data: </string>
    <string name="text_example_date_fall">YYYY-MM-DD HH:MM:SS</string>
    <string name="text_example_date_sess">YYYY-MM-DD HH:MM:SS</string>
    <string name="text_latitude_fall">Latitudine: </string>
    <string name="text_longitude_fall">Longitudine: </string>
    <string name="text_longitude_fall_min">Longitud: </string>
    <string name="text_latitude_fall1">Lat: </string>
    <string name="text_longitude_fall1">Lon: </string>
    <string name="text_example_longitude">ZZ.ZZZZ</string>
    <string name="text_example_latitude">YY.YYYY</string>
    <string name="text_example_ids">YY</string>
    <string name="text_session">Sessione</string>
    <string name="miniature_session">Miniatura sessione</string>
    <string name="text_example_name_contact">Nome</string>
    <string name="text_example_surname_contact">Cognome</string>
    <string name="text_example_mail_contact">abcd@mail.it</string>
    <string name="text_session1">Sessione: </string>
    <string name="text_date_session">Data: </string>
    <string name="text_durate_sess">Durata: </string>
    <string name="text_example_durate_sess">00:00:00</string>
    <string name="text_fall1">Caduta </string>
    <string name="text_example_sent">si/no</string>
    <string name="text_sent">Inviata: </string>
    <string name="text_example_count_fall">KK</string>
    <string name="text_count_fall">N.Cadute: </string>
    <string name="delete_session">Cancella Sessione</string>
    <string name="rename_session">Rinomina Sessione</string>
    <string name="new_session">Avvia Nuova Sessione</string>
    <string name="delete_contact">Cancella Contatto</string>
    <string name="rename_contact">Rinomina Contatto</string>
    <string name="text_namesession">Inserisci un nome sessione: </string>
    <string name="text_addbutton">Aggiungi</string>
    <string name="ultimatesession">Riepilogo ultima sessione: </string>
    <string name="currentsession">Riepilogo sessione in corso: </string>
    <string name="text_example_confirm">Cancellare?</string>
    <string name="text_name_project">Progetto:  Fall Detector</string>
    <string name="text_begin">Tutto iniziò così&#8230;</string>
    <string name="photo_group">Fotogruppo</string>
    <string name="component_group">Componenti Gruppo:</string>
    <string name="component1">Azizi Rachid</string>
    <string name="component2">Trevisan Matteo</string>
    <string name="component3">Tritoni Marco</string>
    <string name="name_course">- Programmazione Di Sistemi Embedded -</string>
    <string name="name_course_min">Progr. Di Sistemi Embedded</string>
    <string name="name_coach">Professore:  Carlo Fantozzi</string>
    
</resources>