<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp"
        android:text="@string/text_email1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp"
        android:text="@string/text_example_mail_contact"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:text="@string/text_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginStart="10sp"
        android:ems="10"
        android:inputType="textCapSentences" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:text="@string/text_surname"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginStart="10sp"
        android:ems="10"
        android:inputType="textCapSentences" >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_no"
            style="@style/button_text_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:text="@string/toast_act_button" />

        <Button
            android:id="@+id/btn_yes"
            style="@style/button_text_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:text="@string/toast_act_ok" />
    </LinearLayout>

</LinearLayout>