<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation = "vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.esp1415NONE.falldetector.SessioneCorrenteFragment" >
    

       
     <RelativeLayout 
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
        android:id="@+id/titleSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/titleSession"
        android:visibility="invisible"
        android:gravity="center"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
 
     
    <LinearLayout 
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <TextView
	        android:id="@+id/textCrono"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="60dp"
	        android:text="@string/time"
	        android:visibility="invisible"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="30sp" />
    </LinearLayout>
     
	
       
        <RelativeLayout 
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
   

	    <ImageButton
	        android:id="@+id/pausebutton"
	        android:layout_width="140dp"
	        android:layout_height="140dp"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:background="@drawable/pause"
	        android:contentDescription="@string/DescPause"
	        android:visibility="invisible" />

	    <ImageButton
	        android:id="@+id/playbutton"
	        android:layout_width="140dp"
	        android:layout_height="140dp"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:background="@drawable/play"
	        android:contentDescription="@string/DescPlay"
	        android:visibility="invisible" />

	    <ImageButton
	        android:id="@+id/stopbutton"
	        android:layout_width="70dp"
	        android:layout_height="70dp"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@+id/pausebutton"
	        android:layout_toEndOf="@+id/pausebutton"
	        android:background="@drawable/stop"
	        android:contentDescription="@string/DescStop"
	        android:visibility="invisible" />

	    </RelativeLayout>
 

	    

</LinearLayout>
